force-app/main/default/objects/Lead/fields/PhoneIQSF__First_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>PhoneIQSF__First_Response_Date__c</fullName>
    <description>Date of the first response to inbound leads</description>
    <inlineHelpText>Date of the first response to inbound leads</inlineHelpText>
    <label>First Response Date</label>
    <type>DateTime</type>
</CustomField>