force-app/main/default/objects/Lead/fields/PhoneIQSF__First_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>PhoneIQSF__First_Response_Time__c</fullName>
    <formula>(BLANKVALUE( PhoneIQSF__First_Response_Date__c , NOW()) -   CreatedDate) * 1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Response Time (m)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>